Made into fullscreen window. Game scales to match.